--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="style.css">
 	<title>the manual</title>
 </head>
 <body>
-	<h1>hihihi</h1>
+	<div class="basic">
+	<h1>Titulo</h1>
+	<img src="https://i.pinimg.com/originals/bd/0a/c1/bd0ac111fbd5b08ce65fea05641dabca.jpg" alt="">
+	<h2>Titulo chikita</h2>
+	<p>texto texto texto texto</p>
+	<p>mas texto texto texto texto</p>
+	<h2>Titulo chikita</h2>
+	<p>texto texto texto texto texto texto texto textotexto texto texto texto</p>
+	<pre>
+texto
+texto texto
+textito
+	</pre>
+	</div>
 </body>
 </html>
