--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 <body>
 	<div class="basic">
 	<h1>Titulo</h1>
+	<center>
+	<a class="alink" href="">BBDD</a>
+	<a class="alink" href="">Big Data</a>
+	<a class="alink" href="">Entornos</a>
+	<a class="alink" href="">SSII</a>
+	<a class="alink" href="">Marcas</a>
+	<a class="alink" href="">Programacion</a>
+	</center>
+
+
 	<img src="https://i.pinimg.com/originals/bd/0a/c1/bd0ac111fbd5b08ce65fea05641dabca.jpg" alt="">
 	<h2>Titulo chikita</h2>
 	<p>texto texto texto texto</p>
