buttons hotfix attempt

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
 	<div class="basic">
 	<h1>Titulo</h1>
-	<center>
+	<div class="centr">
 	<a class="alink" href="">BBDD</a>
 	<a class="alink" href="">Big Data</a>
 	<a class="alink" href="">Entornos</a>
 	<a class="alink" href="">SSII</a>
 	<a class="alink" href="">Marcas</a>
 	<a class="alink" href="">Programacion</a>
-	</center>
+	</div>
 
 
 	<img src="https://i.pinimg.com/originals/bd/0a/c1/bd0ac111fbd5b08ce65fea05641dabca.jpg" alt="">
