--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 </head>
 <body>
 	<div class="basic">
-	<h1>Titulo</h1>
-	<div class="centr">
+	<h1 class="centr">Manual DAW</h1>
+	<p class="centr">Pagina de recursos dirigida por Niliara.
+	Podeis ver el codigo en la pagina de <a href="https://github.com/niliara/niliara.github.io" target="_blank">github</a>
+	</p>
+	<div class="centr-wide">
 	<a class="alink" href="">BBDD</a>
 	<a class="alink" href="">Big Data</a>
 	<a class="alink" href="">Entornos</a>
@@ -17,18 +20,16 @@
 	<a class="alink" href="">Programacion</a>
 	</div>
 
-
 	<img src="https://i.pinimg.com/originals/bd/0a/c1/bd0ac111fbd5b08ce65fea05641dabca.jpg" alt="">
-	<h2>Titulo chikita</h2>
-	<p>texto texto texto texto</p>
-	<p>mas texto texto texto texto</p>
-	<h2>Titulo chikita</h2>
-	<p>texto texto texto texto texto texto texto textotexto texto texto texto</p>
-	<pre>
-texto
-texto texto
-textito
-	</pre>
+
+	<h2>Que es esto?</h2>
+	<p>Esto son unos apuntes online hosteados desde un repositorio de github. El objetivo es tener unos apuntes accesibles, comunes y bien organizados.</p>
+	<p>El codigo fuente es completamente accesible en  
+	<a href="https://github.com/niliara/niliara.github.io" target="_blank">https://github.com/niliara/niliara.github.io</a>
+	</p>
+	<h2>Como puedo ayudar?</h2>
+	<p>Si quieres participar, envia un mensaje por discord al nombre de usuario: niliara</p>
+	<p>Pagina en fase inicial, no se aceptan pull requests.</p>
 	</div>
 </body>
 </html>
