--- a/index.html
+++ b/index.html
@@ -3,33 +3,39 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="style.css">
-	<title>the manual</title>
+	<title>DAW manual</title>
 </head>
 <body>
 	<div class="basic">
 	<h1 class="centr">Manual DAW</h1>
-	<p class="centr">Pagina de recursos dirigida por Niliara.
-	Podeis ver el codigo en la pagina de <a href="https://github.com/niliara/niliara.github.io" target="_blank">github</a>
+	<p class="centr">Pagina de recursos para el curso de daw.
+	El codigo fuente esta disponible en <a href="https://github.com/niliara/niliara.github.io" target="_blank">github</a>
 	</p>
 	<div class="centr-wide">
-	<a class="alink" href="">BBDD</a>
-	<a class="alink" href="">Big Data</a>
-	<a class="alink" href="">Entornos</a>
-	<a class="alink" href="">SSII</a>
-	<a class="alink" href="">Marcas</a>
-	<a class="alink" href="">Programacion</a>
+	<a class="alink" href="BBDD.html">BBDD</a>
+	<a class="alink" href="BigData.html">Big Data</a>
+	<a class="alink" href="Entornos.html">Entornos</a>
+	<a class="alink" href="SSII.html">SSII</a>
+	<a class="alink" href="Marcas.html">Marcas</a>
+	<a class="alink" href="Programacion.html">Programacion</a>
 	</div>
 
 	<img src="https://i.pinimg.com/originals/bd/0a/c1/bd0ac111fbd5b08ce65fea05641dabca.jpg" alt="">
 
 	<h2>Que es esto?</h2>
-	<p>Esto son unos apuntes online hosteados desde un repositorio de github. El objetivo es tener unos apuntes accesibles, comunes y bien organizados.</p>
+	<p>Es una pagina de apuntes hosteada desde un repositorio de github. El objetivo es tener apuntes accesibles, comunes y bien organizados.</p>
 	<p>El codigo fuente es completamente accesible en  
-	<a href="https://github.com/niliara/niliara.github.io" target="_blank">https://github.com/niliara/niliara.github.io</a>
+	<a href="https://github.com/niliara/niliara.github.io" target="_blank">github.com/niliara/niliara.github.io</a>
 	</p>
 	<h2>Como puedo ayudar?</h2>
-	<p>Si quieres participar, envia un mensaje por discord al nombre de usuario: niliara</p>
-	<p>Pagina en fase inicial, no se aceptan pull requests.</p>
+	<p>Si quieres contribuir, envia un mensaje por discord al nombre de usuario: niliara</p>
+	<p>Ahora mismo necesitamos:</p>
+	<ul>
+		<li>Apuntes bien resumidos para añadir a la pagina</li>
+	</ul>
+	<h2>No me gusta la pagina, que hago?</h2>
+	<p>Perfecto! Puedes enviar peticiones o sugerencias para cambios. 
+	Si son descartadas, esta pagina esta bajo la GNU Public License 3.0, por lo que puedes modificarla y publicar tu propia version de ella!</p>
 	</div>
 </body>
 </html>
