--- a/index.html
+++ b/index.html
@@ -31,11 +31,15 @@
 	<p>Si quieres contribuir, envia un mensaje por discord al nombre de usuario: niliara</p>
 	<p>Ahora mismo necesitamos:</p>
 	<ul>
-		<li>Apuntes bien resumidos para añadir a la pagina</li>
+		<li>Apuntes bien resumidos para añadir a las paginas</li>
 	</ul>
-	<h2>No me gusta la pagina, que hago?</h2>
-	<p>Perfecto! Puedes enviar peticiones o sugerencias para cambios. 
-	Si son descartadas, esta pagina esta bajo la GNU Public License 3.0, por lo que puedes modificarla y publicar tu propia version de ella!</p>
+	<p>Las paginas pueden tener:</p>
+	<ul>
+		<li>Titulos</li>
+		<li>Texto (párrafo)</li>
+		<li>Código (sin resaltar sintaxis)</li>
+	</ul>
+	<p>Podeis enviarme los apuntes por correo (niliara@niliara.xyz) o por discord (niliara)</p>
 	</div>
 </body>
 </html>
