--- a/BBDD.html
+++ b/BBDD.html
@@ -12,7 +12,7 @@
 	<a href="index.html">Manual/</a>
 	BBDD</p>
 
-	<a class="anotherlink" href="bbdd/p1.html">Introducción a las bases de datos</a>
+	<a class="anotherlink" href=""></a>
 
 
 	
