--- a/Programacion.html
+++ b/Programacion.html
@@ -12,7 +12,7 @@
 	<a href="index.html">Manual/</a>
 	Programacion</p>
 
-	<a class="anotherlink" href="programacion/pseudocodigo.html">Pseudocodigo</a>
+	<a class="anotherlink" href="programacion/introduccion-c-sharp.html">Introducción a C#</a>
 
 	
 
