changed desc and button colors

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 	<p class="centr">Pagina de recursos para el curso de daw.
 	El codigo fuente esta disponible en <a href="https://github.com/niliara/niliara.github.io" target="_blank">github</a>
 	</p>
+
 	<div class="centr-wide">
-	<a class="alink" href="BBDD.html">BBDD</a>
-	<a class="alink" href="BigData.html">Big Data</a>
-	<a class="alink" href="Entornos.html">Entornos</a>
-	<a class="alink" href="SSII.html">SSII</a>
-	<a class="alink" href="Marcas.html">Marcas</a>
+	<a class="alink" style="color:black" href="BBDD.html">BBDD</a>
+	<a class="alink" style="color:black" href="BigData.html">Big Data</a>
+	<a class="alink" style="color:black" href="Entornos.html">Entornos</a>
+	<a class="alink" style="color:black" href="SSII.html">SSII</a>
+	<a class="alink" style="color:black" href="Marcas.html">Marcas</a>
 	<a class="alink" href="Programacion.html">Programacion</a>
 	</div>
 
@@ -28,18 +29,25 @@
 	<a href="https://github.com/niliara/niliara.github.io" target="_blank">github.com/niliara/niliara.github.io</a>
 	</p>
 	<h2>Como puedo ayudar?</h2>
-	<p>Si quieres contribuir, envia un mensaje por discord al nombre de usuario: niliara</p>
 	<p>Ahora mismo necesitamos:</p>
 	<ul>
 		<li>Apuntes bien resumidos para añadir a las paginas</li>
 	</ul>
 	<p>Las paginas pueden tener:</p>
 	<ul>
-		<li>Titulos</li>
-		<li>Texto (párrafo)</li>
-		<li>Código (sin resaltar sintaxis)</li>
+		<li>Titulos (h1, h2)</li>
+		<li>Texto (p)</li>
+		<li>Código (pre)</li>
 	</ul>
-	<p>Podeis enviarme los apuntes por correo (niliara@niliara.xyz) o por discord (niliara)</p>
+	<p>Podeis enviarme los apuntes por correo (niliara@niliara.xyz) o por el servidor de discord,
+	preferiblemente en <span class="hi">HTML</span>.
+	(los headers, linkear al css y demás no hacen falta)
+	</p>
+
+	<h2></h2>
+
+
 	</div>
+
 </body>
 </html>
