--- a/programacion/introduccion-c-sharp.html
+++ b/programacion/introduccion-c-sharp.html
@@ -51,6 +51,16 @@ class Program
 	</p>
 	
 
+
+
+	<div class="centr-wide">
+	<a class="alink" href="">Anterior</a>
+	<a class="alink" href="">Siguiente</a>
+
+
+	</div>
+
+
 	</div>
 </body>
 </html>
