--- a/index.html
+++ b/index.html
@@ -24,25 +24,23 @@
 	<img src="https://i.pinimg.com/originals/bd/0a/c1/bd0ac111fbd5b08ce65fea05641dabca.jpg" alt="">
 
 	<h2>Que es esto?</h2>
-	<p>Es una pagina de apuntes hosteada desde un repositorio de github. El objetivo es tener apuntes accesibles, comunes y bien organizados.</p>
-	<p>El codigo fuente es completamente accesible en  
-	<a href="https://github.com/niliara/niliara.github.io" target="_blank">github.com/niliara/niliara.github.io</a>
-	</p>
+	<p>Es una pagina de apuntes hosteada desde un repositorio de github,
+	para sobrevivir el curso de DAW.</p>
 	<h2>Como puedo ayudar?</h2>
-	<p>Ahora mismo necesitamos:</p>
-	<ul>
-		<li>Apuntes bien resumidos para añadir a las paginas</li>
-	</ul>
+	<p>Necesitamos apuntes!!!</p>
+
 	<p>Las paginas pueden tener:</p>
 	<ul>
 		<li>Titulos (h1, h2)</li>
 		<li>Texto (p)</li>
 		<li>Código (pre)</li>
 	</ul>
-	<p>Podeis enviarme los apuntes por correo (niliara@niliara.xyz) o por el servidor de discord,
-	preferiblemente en <span class="hi">HTML</span>.
-	(los headers, linkear al css y demás no hacen falta)
-	</p>
+
+	<p>Podeis enviarme los apuntes por correo (niliara@niliara.xyz) o por el servidor de discord.</p>
+	<p>
+	Es preferible que estén en <span class="hi">HTML</span>
+	(los headers, linkear al css y demás no hacen falta).</p>
+	<p>Se aceptan documentos de texto (sin word)</p>
 
 	<h2></h2>
 
