--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<a class="alink" href="Programacion.html">Programacion</a>
 	</div>
 
-	<img src="https://i.pinimg.com/originals/bd/0a/c1/bd0ac111fbd5b08ce65fea05641dabca.jpg" alt="">
+	<img src="cat.jpg" alt="">
 
 	<h2>Que es esto?</h2>
 	<p>Es una pagina de apuntes hosteada desde un repositorio de github,
