primera entrega de apuntes de programacion

--- a/Programacion.html
+++ b/Programacion.html
@@ -12,7 +12,10 @@
 	<a href="index.html">Manual/</a>
 	Programacion</p>
 
-	<a class="anotherlink" href="programacion/introduccion-c-sharp.html">Introducción a C#</a>
+	<a class="anotherlink" style="color:black" href="programacion/bucles.html">Bucles</a>
+	<a class="anotherlink" href="programacion/condicionales.html">Condicionales</a>
+	<a class="anotherlink" href="programacion/variables.html">Variables</a>
+	<a class="anotherlink" href="programacion/introduccion.html">Introducción a C#</a>
 
 	
 
