--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 	<p>Es una pagina de apuntes hosteada desde un repositorio de github,
 	para sobrevivir el curso de DAW.</p>
 	<h2>Como puedo ayudar?</h2>
-	<p>Necesitamos apuntes!!!</p>
+	<p>Necesitamos apuntes,
+	preferible que estén en formato texto (no word)</p>
 
 	<p>Las paginas pueden tener:</p>
 	<ul>
@@ -36,11 +37,7 @@
 		<li>Código (pre)</li>
 	</ul>
 
-	<p>Podeis enviarme los apuntes por correo (niliara@niliara.xyz) o por el servidor de discord.</p>
-	<p>
-	Es preferible que estén en <span class="hi">HTML</span>
-	(los headers, linkear al css y demás no hacen falta).</p>
-	<p>Se aceptan documentos de texto (sin word)</p>
+	<p>Podeis enviarme los apuntes por el servidor de discord o por correo (niliara@niliara.xyz).</p>
 
 	<h2></h2>
 
