--- a/programacion/bucles.html
+++ b/programacion/bucles.html
@@ -14,11 +14,35 @@
 	bucles
 	</p>
 	<h1>Bucles en C#</h1>
-	<p>Cuando vuelva a casa lo hago</p>
+	<p>Los bucles sirven para repetir fragmentos de código
+	sin necesidad de reescribirlos varias veces.</p>
+
+	<h2>Bucles while</h2>
+	<p>Mientras la condición se cumpla,
+	se va a seguir ejecutando el código dentro del while {}</p>
+	<pre>
+while (true)
+{
+
+}</pre>
+	<p>En este ejemplo, hay un bucle infinito
+	(hasta que algo lo rompa).</p>
+
+	<h2>Bucles for</h2>
+	<p>Los bucles for sirven para repetir un fragmento de código
+	una cantidad de veces especificada.
+	Funciona de forma similar al while:</p>
+
+	<pre>
+for (int i = 1; i &lt; 10; i++)
+{
+	Console.WriteLine(i)
+}</pre>
+
 
 
 	<div class="centr-wide">
-	<a class="alink" href="">Anterior</a>
+	<a class="alink" href="condicionales.html">Anterior</a>
 	<a class="alink" href="">Siguiente</a>
 	</div>
 
