--- a/Programacion.html
+++ b/Programacion.html
@@ -12,7 +12,8 @@
 	<a href="index.html">Manual/</a>
 	Programacion</p>
 
-	<a class="anotherlink" style="color:black" href="programacion/bucles.html">Bucles</a>
+	<a class="anotherlink" href="programacion/switch.html">Switch</a>
+	<a class="anotherlink" href="programacion/bucles.html">Bucles</a>
 	<a class="anotherlink" href="programacion/condicionales.html">Condicionales</a>
 	<a class="anotherlink" href="programacion/variables.html">Variables</a>
 	<a class="anotherlink" href="programacion/introduccion.html">Introducción a C#</a>
