--- a/programacion/bucles.html
+++ b/programacion/bucles.html
@@ -39,11 +39,40 @@ for (int i = 1; i &lt; 10; i++)
 	Console.WriteLine(i)
 }</pre>
 
+	<ul>
+		<li>Primero crea una variable integer con el nombre i</li>
+		<pre>... int i = 1 ...</pre>
+		<li>luego, se indica la condición para que se repita el código</li>
+		<pre>... i &lt; 10 ...</pre>
+		<li>por úlimo, se declara que después de cada repetición
+		le sumamos 1 a la variable i</li>
+		<pre>... i++ ...</pre>
+	</ul>
+	<p>En el ejemplo anterior,
+	la i empezaría en 1 y sumaria 1 después de cada repetición.
+	Al llegar a 10, i deja de cumplir la condición i &lt; 10,
+	y el bucle termina.</p>
+	<pre>Output:
+1
+2
+3
+4
+5
+6
+7
+8
+9</pre>
+
+	<h2>Romper un bucle</h2>
+	<p>Para romper un bucle for o while,
+	se puede usar el comando break</p>
+	<pre>break;</pre>
+
 
 
 	<div class="centr-wide">
 	<a class="alink" href="condicionales.html">Anterior</a>
-	<a class="alink" href="">Siguiente</a>
+	<a class="alink" href="switch.html">Siguiente</a>
 	</div>
 
 	</div>
